write up of purely random strategies
This includes the analytical and the numerical section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -215,3 +215,15 @@ issn="1436-4646",
 doi="10.1007/s10107-007-0181-x",
 url="http://dx.doi.org/10.1007/s10107-007-0181-x"
 }
+
+
+% Companion Matrix
+@article{Edelman1995,
+  title={Polynomial roots from companion matrix eigenvalues},
+  author={Edelman, Alan and Murakami, H},
+  journal={Mathematics of Computation},
+  volume={64},
+  number={210},
+  pages={763--776},
+  year={1995}
+}
