--- a/nbs/Mean player vs Average Utility.ipynb
+++ b/nbs/Mean player vs Average Utility.ipynb
@@ -115,7 +115,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p_1, p_2 = sym.symbols('p_1, p_2')"
@@ -135,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for i in [11]:\n",
